<resources>
    <string name="app_name">LDB</string>
    <string name="action_settings">Settings</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="action_sort" translatable="false" />
    <string name="action_sortBy">Sort by</string>
    <string name="last_added">Sort by last added</string>
    <string name="alphabetically">Sort alphabetically</string>
    <string name="sort">Sort</string>
    <string name="info">Information</string>
    <string name="last_additions">Last additions:</string>
    <string name="last_added_on">Last added on</string>
    <string name="_40_words">40 words</string>
    <string name="first_added">Sort by first added</string>
    <string name="translation">Translation</string>
    <string name="example">Example (optional)</string>
    <string name="withExample">Words with example</string>
    <string name="withDefinition">Words with definition</string>
    <string name="noExample">No example</string>
    <string name="noDefinition">No definition</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_words_list">Go to words list</string>
    <string name="sort_by_length">Sort by length</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="category">category</string>
    <string name="word">word</string>
    <string name="createdOn">Created on</string>
    <string name="ex1_editText">First example</string>
    <string name="translation_example">Translation example (optional)</string>
    <string name="definition_editText">Definition (optional)</string>
    <string name="hint_newCat">Write the new category name</string>
    <string name="note">Note</string>
    <string name="no_example_provided">No example provided</string>
    <string name="no_example_translation_provided">No example translation provided</string>
    <string name="no_definition_provided">No definition provided</string>
    <string name="ready">I\'m Ready!!</string>
    <string name="test">Test</string>
    <string name="score1">Excellent!!</string>
    <string name="score2">Awesome!</string>
    <string name="score3">Well done!</string>
    <string name="score4">Good job!</string>
    <string name="score5">Keep practising!</string>
    <string name="info_before_test">Press the button once you feel confident. You will dispose of 15 minutes to write the correct translation for some words</string>
    <string name="back">Back</string>
    <string name="statistics">Statistics</string>
    <string name="show_all_words">Show all words</string>
    <string name="words_acquired">Words acquired</string>
    <string name="words_not_acquired">words not acquired</string>
    <string name="not_acquired">Not acquired</string>
    <string name="how_the_app_works">How the app works</string>
    <string name="m2_tutorial">Let me explain you how it works! \n:)</string>
    <string name="hi">HI!</string>
    <string name="m1_tutorial">It seems it\'s your first time using Language Database.</string>
    <string name="no_words_added">No words added</string>
    <string name="words">Words</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="you_cannot_undo">You cannot undo this operation</string>
    <string name="yes">Yes</string>
    <string name="deleting_cat">Deleting category..</string>
    <string name="no">No</string>
    <string name="edit_cat">Eit category name</string>
    <string name="modify">Modify</string>
    <string name="new_name_required">New name required</string>
    <string name="name_already_exists">Name already exists</string>
    <string name="renaming">Renaming..</string>
    <string name="cat_required">Category required</string>
    <string name="cat_already_exists">Category already exists</string>
    <string name="cat_name_rejected">Category name rejected</string>
    <string name="msg_first_cat_created">Well done!! You can now press on the category to add some words :)</string>
    <string name="successfully_created">Successfully created</string>
    <string name="msg_first_btn_pressed">Press the button "+" in order to create a new category</string>
    <string name="max_tests_today_reached">You have already made three tests today, try tomorrow!! =)</string>
    <string name="add_more_words">Please add some more words in order to make a test</string>
    <string name="add_or_wait">Please add some more words or wait some days</string>
    <string name="add_more_words_statistics">Add some more words in order to display statistics</string>
    <string name="S2_first_word">Write a word in the language you want to learn and its corresponding translation. </string>
    <string name="word_required">Word required</string>
    <string name="trans_required">Translation required </string>
    <string name="word_exists">Word already exists</string>
    <string name="S2_first_word_added">You got your first word =),\n \n press the upper right option menu to see it displayed.</string>
    <string name="word_successfully_added">Word successfully added.</string>
    <string name="word_successfully_added_warning">Word successfully added, its time to try a test =)</string>
    <string name="no_words_added_yet">No words added yet</string>
    <string name="sorting_alphabet">Sorting by alphabetic order..</string>
    <string name="sorting_last_added">Sorting by last added..</string>
    <string name="sorting_first_added">Sorting by first added..</string>
    <string name="filtering_ex">Filtering words with an example..</string>
    <string name="filtering_no_ex">Filtering words without example..</string>
    <string name="sorting_length">Sorting words by their length..</string>
    <string name="filtering_definition">Filtering words with a definition..</string>
    <string name="filtering_no_definition">Filtering words without definition..</string>
    <string name="filtering_acquired">Filtering words already acquired..</string>
    <string name="filtering_not_acquired">Filtering words not acquired..</string>
    <string name="msg_timerToast1">Select one of the menu options for searching, filtering and sorting some words.</string>
    <string name="msg_timerToast2">Press the word to see it\'s information displayed.</string>
    <string name="msg_timerToast3">With the menu item on the right of each word you will be able to edit it or add information.</string>
    <string name="added_on">Added on</string>
    <string name="edit_info">Edit info</string>
    <string name="editing_word_properties">Editing word properties..</string>
    <string name="lets_do_it">Let\'s do it!</string>
    <string name="answer_can_not_be_blank">Answer can\'t be blank</string>
    <string name="test_will_be_canceled">The test will be canceled and the progress lost.</string>
    <string name="time_up">Time\'s up!</string>
    <string name="arrow_tutorial" translatable="false">arrow tutorial</string>
    <string name="menu_edit_or_delete_word">menu edit or delete word</string>
    <string name="write_the_correct_translation">Write the correct translation</string>
    <string name="timer">Timer</string>
    <string name="msg1_statistics1">Press the charts to get more information about them. </string>
    <string name="number_of_words_n_per_group">Number of words \n per group</string>
    <string name="click_for_n_time_progress">Click for \n time progress</string>
    <string name="words_acquired_vs_yet_to_n_be_learnt">Words acquired vs yet to \n be learnt</string>
    <string name="number_of_words_daily_added_n_last_100_active_days">Number of words daily added</string>
    <string name="press_for_n_monthly_view">Press for \n monthly view</string>
    <string name="number_of_words_monthly_added_n_last_6_active_months">Number of words monthly added</string>
    <string name="number_of_words_monthly_acquired_n_last_6_active_months">Number of words monthly acquired</string>
    <string name="number_of_words_daily_acquired_last_100_active_days">Number of words daily acquired</string>
    <string name="press_for_n_daily_view">Press for \n daily view</string>
    <string name="all_the_words_added_on_the_group">Here you have all the added words on the group</string>
    <string name="about_app_text">Language Database (LDB) is an app that allows the user to store its own vocabulary lists and practise with it .</string>
    <string name="about_tests">Tests</string>
    <string name="about_tests_text">The app has a system of tests for which some words are randomly picked and the user has to provide the correct translation. If the answer is right, the word will not appear in the tests again for some days. When the user has repeatedly answered with the right translation, the word will be marked as acquired, \n and it will no longer appear on the test. On top of that, it will appear with a grey color in the words list.</string>
    <string name="about_word_groups">Word groups:</string>
    <string name="about_word_groups_text">The structure of this app is similar to a notes app, with the difference that LDB handles the words using a database, and hence you can perform actions like sorting, filtering searching and editing words.
Each added word will posses certain properties, like translation, definition, example and example translation. Those accessible by clicking on top of the word.</string>
    <string name="about_statistics">Statistics</string>
    <string name="about_statistics_text">On the top right menu of the main screen, you will find an statistics option where you can see the distribution of words per group, as well as how many are yet to be acquired. On top of that,
you can also check the number of words added per day or month.</string>
    <string name="developed_by">Developed by</string>
    <string name="bernat_ferrer_emsisquer_studios">Bernat Ferrer, lead developer in Emsisquer Studios. \n \n To report an issue, please send an email to  emsisquer@gmail.com</string>
    <string name="no_word_acquired_yet">No words acquired yet</string>
</resources>