<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.berni.android.prototype1lanbase.ui.WordsListFragment">

    <item
        android:id="@+id/item_search"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="0"
        android:title="@string/info"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"/>


    <item
        android:id="@+id/item_sort"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="1"
        android:title="@string/sort"
        app:showAsAction="always|withText">

        <menu>

            <item
                android:id="@+id/last_added"
                android:orderInCategory="0"
                android:title="@string/last_added"
                app:showAsAction="never" />

            <item
                android:id="@+id/first_added"
                android:orderInCategory="0"
                android:title="@string/first_added"
                app:showAsAction="never" />
            <item
                android:id="@+id/alphabetically"
                android:orderInCategory="1"
                android:title="@string/alphabetically"
                app:showAsAction="never" />

        </menu>

    </item>

    <item
        android:id="@+id/item_filter"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:icon="@drawable/ic_filter"
        android:iconTint="@color/white"
        android:orderInCategory="2"
        android:title="@string/info"
        app:showAsAction="always|withText">

        <menu>

            <item
                android:id="@+id/withExample"
                android:orderInCategory="0"
                android:title="@string/withExample"
                app:showAsAction="never"/>

            <item
                android:id="@+id/noExample"
                android:orderInCategory="1"
                android:title="@string/noExample"
                app:showAsAction="never"/>


            <item
                android:id="@+id/withDefinition"
                android:orderInCategory="2"
                android:title="@string/withDefinition"
                app:showAsAction="never"/>


            <item
                android:id="@+id/noDefinition"
                android:orderInCategory="3"
                android:title="@string/noDefinition"
                app:showAsAction="never"/>

        </menu>

    </item>


    <item
        android:id="@+id/item_info"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:orderInCategory="3"
        android:iconTint="@color/white"
        android:title="@string/info"
        app:showAsAction="always|withText"/>

</menu>




    <!--
    <style name="MyActionButtonOverflow" parent="android:style/Widget.Holo.Light.ActionButton.Overflow">
        <item name="android:src">@drawable/ic_item</item>
        <item name="android:background">?android:attr/actionBarItemBackground</item>
        <item name="android:contentDescription">"Lala"</item>
    </style>-->
