<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id = "@+id/menu_main"
    tools:context="com.berni.android.prototype1lanbase.ui.FirstFragment">

    <item
        android:id="@+id/item_search"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:orderInCategory="0"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"/>
    <item
        android:id = "@+id/item_test"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:orderInCategory="1"
        android:icon="@drawable/test_white"
        android:title="@string/test"
        app:showAsAction="ifRoom"/>

       <!-- app:actionViewClass="android.widget.ViewAnimator" />-->
    <item
        android:id="@+id/item_statistics"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:orderInCategory="3"
        android:title="@string/statistics"/>
    <item
        android:id="@+id/item_all"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:orderInCategory="2"
        android:title="@string/show_all_words"/>
    <item
        android:id="@+id/item_infoApp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:orderInCategory="3"
        android:title="@string/how_the_app_works"/>
</menu>
