<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.InfoFragment"
    tools:ignore="MissingDefaultResource">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:scrollbars="none"
        android:layout_height="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout

        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/aboutApp"
            android:layout_marginTop="50dp"
            android:layout_width="300dp"
            android:textSize="25sp"
            android:fontFamily="@font/lato_bold"
            android:layout_height="wrap_content"
            android:text="@string/about_app" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/about_app_text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/about_tests"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="300dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/about_tests_text"/>


        <TextView
            android:id="@+id/textView4"
            android:layout_width="300dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:textSize="25sp"
            android:text="@string/about_word_groups"/>


        <TextView
            android:id="@+id/textView5"
            android:layout_width="300dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/about_word_groups_text"/>


            <TextView
            android:id="@+id/textView6"
            android:layout_width="300dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:textSize="25sp"
            android:text="@string/about_statistics"/>


        <TextView
            android:id="@+id/textView7"
            android:layout_width="300dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/about_statistics_text"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="300dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:textSize="25sp"
            android:text="@string/developed_by"/>


        <TextView
            android:id="@+id/textView9"
            android:layout_width="300dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/bernat_ferrer_emsisquer_studios"/>








    </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>