<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditWordFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/HguideWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent='0.20' />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/VguideWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

       <!--<LinearLayout-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/HguideWord"
        app:layout_constraintEnd_toEndOf="@id/VguideWord"
        app:layout_constraintStart_toEndOf="@id/VguideWord"
        app:layout_constraintTop_toTopOf="@id/HguideWord" >

    <EditText
        android:id="@+id/word_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="word"
        android:hint="@string/word"
        android:inputType="text"
        android:singleLine="true"
        android:fontFamily="@font/lato_regular"
        android:textColor="#616161"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <EditText
        android:id="@+id/trans1_editText"
        android:layout_marginStart="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="word"
        android:hint="@string/translation"
        android:inputType="text"
        android:singleLine="true"
        android:fontFamily="@font/lato_regular"
        android:textColor="#8C9EFF"
        android:textSize="18sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>

    <EditText
        android:id ="@id/ex1_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:autofillHints="word"
        android:hint="@string/ex1_editText"
        android:inputType="text"
        android:singleLine="true"
        android:fontFamily="@font/lato_regular"
        android:textColor="#616161"
        android:textSize="18sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/VguideWord"
        app:layout_constraintStart_toEndOf="@id/VguideWord"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/date_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:autofillHints="word"
        android:hint="@string/createdOn"
        android:fontFamily="@font/lato_regular"
        android:textColor="#616161"
        android:textSize="15sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>