<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TutorialActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:padding = "8dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tutorial_t1"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="200dp"
            android:layout_height="400dp"
            android:textSize="20sp"
            android:text="@string/hi"/>

        <!--string/hi-->

        <TextView
            android:id="@+id/tutorial_t2"
            android:layout_marginTop="120dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:lineSpacingExtra="7dp"
            android:textSize="20sp"
            android:text="@string/m1_tutorial"/>

        <!--string/m1_tutorial-->

        <TextView
            android:id="@+id/tutorial_t3"
            android:layout_marginTop="220dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:lineSpacingExtra="7dp"
            android:textSize="20sp"
            android:text="@string/m2_tutorial"/>

        <!--string/m2_tutorial-->

            <!--android:backgroundTintMode="@android:integer/config_shortAnimTime"/>

            -->


    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:layout_width="wrap_content"
        android:id="@+id/btn_tutorial_next"
        android:src ="@drawable/ic_arrow_forward_black_24dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="510dp"
        android:layout_marginStart="220dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:alpha = "0.5"/>


    <include
        android:id = "@+id/toolbar"
        layout = "@layout/toolbar"/>

</androidx.constraintlayout.widget.ConstraintLayout>

