<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragmentFirst"
    tools:context=".ui.FirstFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/VguideArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/HguideArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

<ImageView
    android:id="@+id/arr"
    android:contentDescription="@string/arrow_tutorial"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="100dp"
    app:layout_constraintBottom_toBottomOf="@id/HguideArrow"
    app:layout_constraintEnd_toStartOf="@id/VguideArrow"
    app:layout_constraintStart_toEndOf="@id/VguideArrow"
    app:layout_constraintTop_toTopOf="@id/HguideArrow" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/VguideCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/HguideCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_cats"
        android:layout_marginTop = "70dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>

     <androidx.cardview.widget.CardView

         android:windowSoftInputMode="stateUnchanged"
         android:visibility = "gone"
         android:id="@+id/recycler_view_newCat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="@id/HguideCard"
         app:layout_constraintEnd_toStartOf="@id/VguideCard"
         app:layout_constraintStart_toEndOf="@id/VguideCard"
         app:layout_constraintTop_toTopOf="@id/HguideCard">

         <EditText
             android:hint="@string/hint_newCat"
             android:autofillHints="write the new category "
             android:focusable="true"
             android:id="@+id/editText_newCat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="text" />

         <Button
             android:id="@+id/btnCreate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:focusable="true"
             android:clickable="true"
             android:layout_marginTop="80dp"
             android:textSize="15sp"
             android:text="@string/create" />

         <Button
             android:id="@+id/btnCancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
             android:layout_marginStart="100dp"
             android:layout_marginTop="80dp"
             android:text="@string/cancel"
             android:focusable="true" />


   </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/VguideBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/HguideBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:id="@+id/btn_add"
        android:src="@drawable/ic_add_black_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@id/HguideBtn"
        app:layout_constraintEnd_toStartOf="@id/VguideBtn"
        app:layout_constraintStart_toEndOf="@id/VguideBtn"
        app:layout_constraintTop_toTopOf="@id/HguideBtn"
        app:backgroundTint="#1EC3D8"
        android:focusable="true" />

    <include
        android:id = "@+id/toolbar"
        layout = "@layout/toolbar"/>

</androidx.constraintlayout.widget.ConstraintLayout>


